--- a/.github/workflows/workflow-ci.yml
+++ b/.github/workflows/workflow-ci.yml
@@ -4,11 +4,13 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: Workflow de Continuos Integration
+name: Workflow de Integração Contínua
 
 on:
+  push:
+    branches: [ "main",  "develop"]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "main",  "develop"]
 
 jobs:
   continuous-integration:
@@ -17,9 +19,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Use Node.js 
+    - name: Use Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: 22.
+        node-version: 18.
     - run: npm install
-    - run: node server.js
+    - run: npm testgit workflow
+    
